<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_name"
            android:textSize="18sp"/>

        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/textview_devicename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_address"
            android:textSize="18sp"/>

        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/textview_deviceaddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="233dp"
        android:layout_margin="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button"
            android:layout_width="21dp"
            android:layout_height="86dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_margin="10dp"
            android:background="@drawable/drawable_button"
            app:backgroundTint="@null"
            android:elevation="4.5dp"
            android:stateListAnimator="@null"
            android:text="@string/button"
            android:textSize="8sp"
            android:textColor="#040404" />

        <TextView
            android:id="@+id/text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:text="@string/text"
            android:textSize="30sp" />


    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_margin="30dp"
        android:orientation="horizontal">

        <com.univ.toyama.inform_busroute.TestCanvasView
            android:id="@+id/test_view1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="100dp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/drawable_button"
            android:elevation="4.5dp"
            android:stateListAnimator="@null"
            android:text="@string/button3"
            android:textColor="#040404"
            app:backgroundTint="@null" />

    </RelativeLayout>

</LinearLayout>
